# quilc

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  ACKNOWLEDGEMENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  NEWS.md  README.md  VERSION.txt  boondoggle-tests.asd  boondoggle.asd  build-app.lisp  cl-quil-benchmarking.asd  cl-quil-tests.asd  cl-quil.asd  docker-compose.yml  libquilc-tests.asd  libquilc.asd  quilc-tests.asd  quilc.asd
.github/workflows/: build-docker.yml  test.yml
app/src/: chip-cache.lisp  entry-point.lisp  globals.lisp  mangle-shared-objects.lisp  options.lisp  package.lisp  printers.lisp  rpc-server.lisp  versions.lisp  web-server.lisp
app/tests/: faithfulness-tests.lisp  misc-tests.lisp  package.lisp  rpcq-tests.lisp  (+2 more)
bamboo/: docker_build.sh  docker_clean.sh  docker_cleanup.sh  docker_push.sh  docker_quilc.sh  docker_test.sh  docker_tests.sh  git_tag.sh
benchmarking/: addresser-benchmarks.lisp  chip-spec-benchmarks.lisp  compressor-benchmarks.lisp  package.lisp  parser-benchmarks.lisp  program-size.lisp  qasm-benchmarks.lisp  quilc-mon-prof.lisp  quilc-perf.lisp  rewiring-analysis.lisp  suite.lisp  utils.lisp
boondoggle/: README.md  VERSION.txt  boondoggle-tests.asd  boondoggle.asd
coverage-report/: coverage-report.lisp
doc/: Makefile  canonical-representation.tex  compiler-hooks.tex  developer-guide.tex  preamble.tex
docker/: Dockerfile  Dockerfile.base  Dockerfile.test  Makefile  clean.sh  cleanup.sh  push.sh  test.sh
elf-library/: .gitignore  Makefile  build.lisp  example.c
lib/: .gitignore  Makefile
src/: ast.lisp  build-gate.lisp  cfg.lisp  chip-reader.lisp  chip-specification.lisp  cl-quil.lisp  classical-memory.lisp  compilation-methods.lisp  compiler-hook.lisp  context.lisp  contribs.lisp  csd.lisp  define-compiler.lisp  define-pragma.lisp  entry-point.lisp  environment.lisp  frontend-options.lisp  frontend-utilities.lisp  gates.lisp  initial-rewiring.lisp  initialize-standard-gates.lisp  magicl-constructors.lisp  mangle-shared-objects.lisp  matrix-operations.lisp  operator-bind.lisp  options.lisp  package.lisp  parser.lisp  pragmas.lisp  print-program.lisp  printers.lisp  qasm.lisp  queue.lisp  quilt.lisp  relabeling.lisp  resource.lisp  rpc-server.lisp  server.lisp  sk-compile.lisp  solovay-kitaev.lisp  (+7 more)
src/contrib/tweedledum/: CMakeLists.txt  README.md  test-tweedledum.lisp  tweedledum.c  tweedledum.lisp
tests/: addresser-tests.lisp  analysis-tests.lisp  ansatz-search-tests.lisp  approximation-tests.lisp  benchmarking-procedures-tests.lisp  cfg-tests.lisp  chip-specification-tests.lisp  classical-memory-tests.lisp  clifford-tests.lisp  compilation-tests.lisp  compiler-hook-tests.lisp  csd-tests.lisp  defcircuit-tests.lisp  e2.gv  extern-pragma-tests.lisp  extern-tests.lisp  faithfulness-tests.lisp  initial-rewiring-tests.lisp  lexer-tests.lisp  linear-reversible-circuit-tests.lisp  logical-matrix-sanity-tests.lisp  misc-tests.lisp  package.lisp  parser-tests.lisp  permutation-tests.lisp  printer-tests.lisp  qasm-tests.lisp  quilt-tests.lisp  resource-tests.lisp  rewrite-tests.lisp  rpcq-tests.lisp  smt-tests.lisp  solovay-kitaev-tests.lisp  sqisw-decomp-tests.lisp  state-prep-tests.lisp  stub-tests.lisp  suite.lisp  translator-tests.lisp  typed-memory-tests.lisp  utilities.lisp
(+491 files in other folders)
